--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v1
-description: NGINX Example
-name: helm-demo
-version: 0.1.0
+appVersion: "1"
+description: demo
+name: helm
+version: 0.1.1
